deploy: 4bf9baa04ecc109d7182c3a42807ae884eb8c386

--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -41294,6 +41294,19 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Setup.Legends.LegendWarsong.GromHellscream
   nameWithType: LegendWarsong.GromHellscream
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Mannoroth
+  name: Mannoroth
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendWarsong.html#WarcraftLegacies_Source_Setup_Legends_LegendWarsong_Mannoroth
+  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Mannoroth
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Mannoroth
+  nameWithType: LegendWarsong.Mannoroth
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Mannoroth*
+  name: Mannoroth
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendWarsong.html#WarcraftLegacies_Source_Setup_Legends_LegendWarsong_Mannoroth_
+  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Mannoroth
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Mannoroth
+  nameWithType: LegendWarsong.Mannoroth
 - uid: WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Orgrimmar
   name: Orgrimmar
   href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendWarsong.html#WarcraftLegacies_Source_Setup_Legends_LegendWarsong_Orgrimmar
