--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -29166,6 +29166,64 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.Legion.QuestControlSpire.RewardFlavour
   nameWithType: QuestControlSpire.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace
+  name: QuestKillCapitalPalace
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.html
+  commentId: T:WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace
+  nameWithType: QuestKillCapitalPalace
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.#ctor(MacroTools.LegendSystem.Capital)
+  name: QuestKillCapitalPalace(Capital)
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.html#WarcraftLegacies_Source_Quests_Legion_QuestKillCapitalPalace__ctor_MacroTools_LegendSystem_Capital_
+  commentId: M:WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.#ctor(MacroTools.LegendSystem.Capital)
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.QuestKillCapitalPalace(MacroTools.LegendSystem.Capital)
+  nameWithType: QuestKillCapitalPalace.QuestKillCapitalPalace(Capital)
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.#ctor*
+  name: QuestKillCapitalPalace
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.html#WarcraftLegacies_Source_Quests_Legion_QuestKillCapitalPalace__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.QuestKillCapitalPalace
+  nameWithType: QuestKillCapitalPalace.QuestKillCapitalPalace
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.html#WarcraftLegacies_Source_Quests_Legion_QuestKillCapitalPalace_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestKillCapitalPalace.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.html#WarcraftLegacies_Source_Quests_Legion_QuestKillCapitalPalace_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.OnComplete
+  nameWithType: QuestKillCapitalPalace.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.html#WarcraftLegacies_Source_Quests_Legion_QuestKillCapitalPalace_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.RewardDescription
+  nameWithType: QuestKillCapitalPalace.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.html#WarcraftLegacies_Source_Quests_Legion_QuestKillCapitalPalace_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.RewardDescription
+  nameWithType: QuestKillCapitalPalace.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.RewardFlavour
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.html#WarcraftLegacies_Source_Quests_Legion_QuestKillCapitalPalace_RewardFlavour
+  commentId: P:WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.RewardFlavour
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.RewardFlavour
+  nameWithType: QuestKillCapitalPalace.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.RewardFlavour*
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.html#WarcraftLegacies_Source_Quests_Legion_QuestKillCapitalPalace_RewardFlavour_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.RewardFlavour
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestKillCapitalPalace.RewardFlavour
+  nameWithType: QuestKillCapitalPalace.RewardFlavour
 - uid: WarcraftLegacies.Source.Quests.Legion.QuestLegionCaptureSunwell
   name: QuestLegionCaptureSunwell
   href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestLegionCaptureSunwell.html
@@ -29369,6 +29427,64 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.Legion.QuestSummonLegion.RewardFlavour
   nameWithType: QuestSummonLegion.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral
+  name: QuestUnlockAstral
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.html
+  commentId: T:WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral
+  nameWithType: QuestUnlockAstral
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.#ctor(MacroTools.LegendSystem.Capital)
+  name: QuestUnlockAstral(Capital)
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.html#WarcraftLegacies_Source_Quests_Legion_QuestUnlockAstral__ctor_MacroTools_LegendSystem_Capital_
+  commentId: M:WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.#ctor(MacroTools.LegendSystem.Capital)
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.QuestUnlockAstral(MacroTools.LegendSystem.Capital)
+  nameWithType: QuestUnlockAstral.QuestUnlockAstral(Capital)
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.#ctor*
+  name: QuestUnlockAstral
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.html#WarcraftLegacies_Source_Quests_Legion_QuestUnlockAstral__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.QuestUnlockAstral
+  nameWithType: QuestUnlockAstral.QuestUnlockAstral
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.html#WarcraftLegacies_Source_Quests_Legion_QuestUnlockAstral_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestUnlockAstral.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.html#WarcraftLegacies_Source_Quests_Legion_QuestUnlockAstral_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.OnComplete
+  nameWithType: QuestUnlockAstral.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.html#WarcraftLegacies_Source_Quests_Legion_QuestUnlockAstral_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.RewardDescription
+  nameWithType: QuestUnlockAstral.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.html#WarcraftLegacies_Source_Quests_Legion_QuestUnlockAstral_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.RewardDescription
+  nameWithType: QuestUnlockAstral.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.RewardFlavour
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.html#WarcraftLegacies_Source_Quests_Legion_QuestUnlockAstral_RewardFlavour
+  commentId: P:WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.RewardFlavour
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.RewardFlavour
+  nameWithType: QuestUnlockAstral.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.RewardFlavour*
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.html#WarcraftLegacies_Source_Quests_Legion_QuestUnlockAstral_RewardFlavour_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.RewardFlavour
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Legion.QuestUnlockAstral.RewardFlavour
+  nameWithType: QuestUnlockAstral.RewardFlavour
 - uid: WarcraftLegacies.Source.Quests.Lordaeron
   name: WarcraftLegacies.Source.Quests.Lordaeron
   href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.html
